cmake_minimum_required(VERSION 3.10...3.15)
project(cmake_example VERSION 0.1.0 DESCRIPTION "An example CMake project to be used as a template" LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(fmt REQUIRED)
add_executable(cmake_example src/main.cpp)
target_link_libraries(cmake_example PRIVATE fmt::fmt)

if ( CMAKE_CXX_COMPILER_ID MATCHES "Clang|AppleClang|GNU" )
    target_compile_options( cmake_example PRIVATE -Wall -Wextra -Wunreachable-code -Wpedantic)
endif()
if ( CMAKE_CXX_COMPILER_ID MATCHES "Clang" )
    target_compile_options( cmake_example PRIVATE -Wweak-vtables -Wexit-time-destructors -Wglobal-constructors -Wmissing-noreturn )
endif()
if ( CMAKE_CXX_COMPILER_ID MATCHES "MSVC" )
    target_compile_options( cmake_example PRIVATE /W4 /w44265 /w44061 /w44062 )
endif()